--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -242,6 +242,9 @@
         <entry kind="file" path="${testLibPath}/geronimo-jsp_2.0_spec-1.0.jar" />
         <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
       </handler>
+      <handler type="dolteng">
+        <entry kind="file" path=".settings/dolteng.teeda.pref" />
+      </handler>
       <handler type="appDicon">
         <entry path="app_aop.dicon" />
         <entry path="teedaExtension.dicon" />
@@ -281,6 +284,9 @@
         <entry kind="file" path="${libPath}/s2wicket-1.2.1.jar" />
         <entry kind="file" path="${libPath}/cglib-nodep-2.1_3.jar" />
       </handler>
+      <handler type="dolteng">
+        <entry kind="file" path=".settings/dolteng.s2wicket.pref" />
+      </handler>
       <if jre="1.5,1.6" />
     </project>
     <project id="flex2" name="S2Flex2"
@@ -310,6 +316,9 @@
         <entry kind="file" path="${libPath}/s2-flex2-1.0.2.jar" />
         <entry kind="file" path="${libPath}/geronimo-jsp_2.0_spec-1.0.jar" />
         <entry kind="file" path="${libPath}/geronimo-servlet_2.4_spec-1.0.jar" />
+      </handler>
+      <handler type="dolteng">
+        <entry kind="file" path=".settings/dolteng.s2flex2.pref" />
       </handler>
       <handler type="appDicon">
         <entry path="remoting_amf3.dicon" />
@@ -345,6 +354,9 @@
       <handler type="classpath">
         <entry kind="file" path="${libPath}/s2-dao-1.0.47.jar" />
         <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
+      </handler>
+      <handler type="dolteng">
+        <entry kind="file" path=".settings/dolteng.s2dao.pref" />
       </handler>
       <handler type="appDicon">
         <entry path="dao.dicon" />
@@ -396,6 +408,9 @@
         <entry kind="file" path="${libPath}/s2hibernate-jpa-1.0.1.jar" />
         <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
         <entry kind="file" path="${testLibPath}/junit-4.3.1.jar" />
+      </handler>
+      <handler type="dolteng">
+        <entry kind="file" path=".settings/dolteng.kuina.pref" />
       </handler>
       <handler type="appDicon">
         <entry path="kuina-dao.dicon" />
