sandboxBranch: 旧プロジェクトタイプとの互換情報表示を追加。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@827 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -328,7 +328,7 @@
       </handler>
       <if jre="1.5,1.6" />
     </project>
-    <project id="flex2" name="S2Flex2"
+    <project id="s2flex2" name="S2Flex2"
         extends="base"
         root="template/s2flex2"
         displayOrder="PR05"
