従来「プロジェクトタイプ(projectType)」と呼ばれていたものを「ファセット(facet)」に変更した。これから出てくる「アプリケーションタイプ(applicationType)」との意味混乱を避ける為。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@830 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.properties
+++ b/org.seasar.dolteng.projects/plugin.properties
@@ -16,16 +16,16 @@
 plugin.author=the Seasar Foundation
 plugin.brand=Dolteng Eclipse Plugin
 
-projectTypeDesc.Teeda=JSF implementation and extension based on DI and AOP.
-projectTypeDesc.SAStruts=framework to develop Super Agile with Struts and Seasar2
-projectTypeDesc.S2Flex2=Library to use S2Container components from Flash Player Flex.
-projectTypeDesc.S2Wicket=Library to use S2Container components from Wicket.
+facetDesc.Teeda=JSF implementation and extension based on DI and AOP.
+facetDesc.SAStruts=framework to develop Super Agile with Struts and Seasar2
+facetDesc.S2Flex2=Library to use S2Container components from Flash Player Flex.
+facetDesc.S2Wicket=Library to use S2Container components from Wicket.
 
-projectTypeDesc.S2Dao=O/R mapping framework without using XML to map definitions.
-projectTypeDesc.Kuina=JPA (Java Persistence API) framework.
+facetDesc.S2Dao=O/R mapping framework without using XML to map definitions.
+facetDesc.Kuina=JPA (Java Persistence API) framework.
 
-projectTypeDesc.Sysdeo=Sysdeo Tomucat Plugin
-projectTypeDesc.WTP=WTP
+facetDesc.Sysdeo=Sysdeo Tomucat Plugin
+facetDesc.WTP=WTP
 
-projectTypeDesc.S2JMSo=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
-projectTypeDesc.S2JMSio=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
+facetDesc.S2JMSo=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
+facetDesc.S2JMSio=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
