sandboxBranch: Kuina-Dao(TopLink)を追加。アプリケーションタイプ設定を追加。
git-svn-id: https://www.seasar.org/svn/chura/branches/daisukeSandbox@831 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/org.seasar.dolteng.projects/plugin.properties
+++ b/org.seasar.dolteng.projects/plugin.properties
@@ -22,7 +22,8 @@ facetDesc.S2Flex2=Library to use S2Container components from Flash Player Flex.
 facetDesc.S2Wicket=Library to use S2Container components from Wicket.
 
 facetDesc.S2Dao=O/R mapping framework without using XML to map definitions.
-facetDesc.Kuina=JPA (Java Persistence API) framework.
+facetDesc.KuinaHibernate=JPA (Java Persistence API) framework.
+facetDesc.KuinaTopLink=JPA (Java Persistence API) framework.
 
 facetDesc.Sysdeo=Sysdeo Tomucat Plugin
 facetDesc.WTP=WTP
