--- a/org.seasar.dolteng.projects/plugin.xml
+++ b/org.seasar.dolteng.projects/plugin.xml
@@ -436,13 +436,10 @@
         </handler>
       </if>
     </facet>
-    <facet id="kuina" name="Kuina-Dao"
+    <facet id="kuina" name="Kuina Base"
         extends="base"
         root="template/kuina"
-        displayOrder="PE02"
-        description="%facetDesc.Kuina"
         resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
-      <if jre="1.5,1.6" />
       <property name="libPath" value="lib" />
       <property name="libSrcPath" value="lib/sources" />
       <property name="mainOutPath" value="target/classes" />
@@ -462,13 +459,9 @@
         <entry kind="file" path="${libPath}/geronimo-ejb_3.0_spec-1.0.jar" />
         <entry kind="file" path="${libPath}/geronimo-interceptor_3.0_spec-1.0.jar" />
         <entry kind="file" path="${libPath}/geronimo-jpa_3.0_spec-1.0.jar" />
-        <entry kind="file" path="${libPath}/hibernate-3.2.3.ga.jar" />
-        <entry kind="file" path="${libPath}/hibernate-annotations-3.2.1.ga.jar" />
-        <entry kind="file" path="${libPath}/hibernate-entitymanager-3.2.1.ga.jar" />
         <entry kind="file" path="${libPath}/jboss-archive-browsing-5.0.0alpha-200607201-119.jar" />
         <entry kind="file" path="${libPath}/kuina-dao-1.0.1.jar" />
         <entry kind="file" path="${libPath}/lucene-core-2.0.0.jar" />
-        <entry kind="file" path="${libPath}/s2hibernate-jpa-1.0.1.jar" />
         <entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
         <entry kind="file" path="${testLibPath}/junit-4.3.1.jar" />
       </handler>
@@ -498,6 +491,30 @@
         <component name="helperCustomizer">
           <addCustomizer name="traceCustomizer" />
         </component>
+      </handler>
+    </facet>
+    <facet id="kuinaHibernate" name="Kuina-Dao (Hibernate)"
+        extends="kuina"
+        displayOrder="PE02"
+        description="%facetDesc.KuinaHibernate"
+        resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
+      <if jre="1.5,1.6" />
+      <handler type="classpath">
+        <entry kind="file" path="${libPath}/hibernate-3.2.3.ga.jar" />
+        <entry kind="file" path="${libPath}/hibernate-annotations-3.2.1.ga.jar" />
+        <entry kind="file" path="${libPath}/hibernate-entitymanager-3.2.1.ga.jar" />
+        <entry kind="file" path="${libPath}/s2hibernate-jpa-1.0.1.jar" />
+      </handler>
+    </facet>
+    <facet id="kuinaTopLink" name="Kuina-Dao (TopLink)"
+        extends="kuina"
+        displayOrder="PE03"
+        description="%facetDesc.KuinaTopLink"
+        resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
+      <if jre="1.5,1.6" />
+      <handler type="classpath">
+        <entry kind="file" path="${libPath}/toplink-essentials-2.0-58g.jar" />
+        <entry kind="file" path="${libPath}/s2toplink-jpa-1.0.0.jar" />
       </handler>
     </facet>
 
